# sokol_sample_c

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat  script.lua
docs/: README.md  sokol_api.md  sokol_app.md  sokol_fetch.md  sokol_gfx.md  sokol_glue.md  sokol_log.md  sokol_time.md
examples/: cube_sapp.c  loadpng_sapp.c  loadpng_sapp02.c  loadpng_sapp03.c  quad-wireframe.c  quad.c  quad_index.c  sbuftex_sapp.c  sokol_cube.c  sokol_cube_texture.c  sokol_debug_test.c  sokol_fetch_test.c  sokol_imgui.c  sokol_input.c  sokol_nuklear.c  sokol_quad.c  sokol_quad_index.c  sokol_quad_texture.c  sokol_quad_wireframe.c  sokol_triangle.c  sokol_window.c  sokol_window02.c  triangle.c
include/: cube_sapp.glsl.h  custom_log.h  loadpng_sapp.glsl.h  module_cimgui.h  module_lua.h  quad-wireframe.glsl.h  quad.glsl.h  quad_textured.glsl.h  sbuftex_sapp.glsl.h  triangle.glsl.h
libs/: README.md
libs/dbgui/: dbgui.cc  dbgui.h
libs/nuklear/: nuklear.c
libs/sokol/: sokol_imgui.h  sokol_nuklear.h
libs/stb/: stb_image.c  stb_image.h
libs/util/: fileutil.c  fileutil.h  sokol_debugtext.h
libs/vecmath/: vecmath.h
resources/: hello_world.txt
shaders/: README.md  loadpng_sapp.glsl  quad_textured.glsl  quad_wireframe.glsl  sbuftex_sapp.glsl  textcube_sapp.glsl
src/: custom_log.c  demo.c  main.c  module_cimgui.c  module_lua.c  sokol_window.c
